--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-svg": "^16.1.12",
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.82.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "svg-url-loader": "^8.0.0",
     "tailwindcss": "^3.3.2"
   }
 }
