--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.13.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.22.2",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.7",
     "formik": "^2.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-modal": "^3.16.1",
-    "react-redux": "^8.1.0",
+    "react-multistep": "^5.5.8",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.12",
