--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.12",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "webpack": "^5.82.1",
     "yup": "^1.2.0"
