--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.12",
     "uuid": "^9.0.0",
+    "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
     "webpack": "^5.82.1",
     "yup": "^1.2.0"
