--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.12",
+    "react-toastify": "^9.1.3",
+    "toastify": "^2.0.1",
     "uuid": "^9.0.0",
     "uuidv4": "^6.2.13",
     "web-vitals": "^2.1.4",
