--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "2.9.3",
     "firebase": "^9.22.2",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
